--- a/index.html
+++ b/index.html
@@ -1,43 +1,136 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Smart Box Portal</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script defer src="app.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>SmartBox Portal</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header">
-    <h1>Welcome, Ravisha 🌸</h1>
+  <header class="top">
+    <div class="welcome">Welcome, Ravisha 🌸</div>
   </header>
 
-  <main class="dashboard">
-    <div class="box" id="box1">
-      <div class="icon">📦</div>
-      <h2>Box 1</h2>
-      <p><strong>Status:</strong> Active</p>
-      <p><strong>Temperature:</strong> 27°C</p>
-      <p><strong>Humidity:</strong> 68%</p>
-      <p><strong>Battery:</strong> 85%</p>
-    </div>
-  </main>
-
-  <div id="popup" class="popup">
-    <div class="popup-content">
-      <span class="close">&times;</span>
-      <h2>Box 1 Details</h2>
-      <canvas id="barChart" width="400" height="200"></canvas>
-      <div class="details">
-        <p><strong>Box ID:</strong> BX001</p>
-        <p><strong>Location:</strong> Warehouse A</p>
-        <p><strong>Temperature:</strong> 27°C</p>
-        <p><strong>Humidity:</strong> 68%</p>
-        <p><strong>Battery:</strong> 85%</p>
-        <p><strong>Status:</strong> Active</p>
+  <div id="app" class="app hidden">
+    <div class="controls">
+      <div class="left"></div>
+      <div class="right">
+        <button id="addBoxBtn" class="btn">+ Add Box</button>
+        <button id="exportBtn" class="btn">Export JSON</button>
+        <label class="btn file-btn">Import JSON<input id="importFile" type="file" accept=".json" hidden></label>
       </div>
     </div>
+
+    <main class="main">
+      <div id="boxes" class="boxes"></div>
+    </main>
   </div>
+
+  <!-- Box Modal -->
+  <div id="modal" class="modal hidden" role="dialog" aria-modal="true">
+    <div class="modal-panel">
+      <button id="modalClose" class="modal-close" aria-label="Close">×</button>
+      <h2 id="modalTitle">Box Details</h2>
+      <form id="boxForm">
+        <div class="row">
+          <div>
+            <label>Box ID</label>
+            <input name="id" required maxlength="32" />
+          </div>
+          <div>
+            <label>Icon</label>
+            <select name="icon">
+              <option value="📦">Storage 📦</option>
+              <option value="🌡️">Temperature 🌡️</option>
+              <option value="💧">Humidity 💧</option>
+              <option value="🔋">Battery 🔋</option>
+              <option value="📍">Location 📍</option>
+            </select>
+          </div>
+        </div>
+
+        <label>Name</label>
+        <input name="name" required maxlength="60" />
+
+        <label>Location</label>
+        <input name="location" maxlength="80" />
+
+        <label>Status</label>
+        <select name="status">
+          <option>Active</option>
+          <option>Idle</option>
+          <option>Offline</option>
+        </select>
+
+        <div class="row">
+          <div>
+            <label>Temperature (°C)</label>
+            <input name="temp" type="number" step="0.1" />
+          </div>
+          <div>
+            <label>Humidity (%)</label>
+            <input name="hum" type="number" />
+          </div>
+        </div>
+
+        <label>Battery (%)</label>
+        <input name="battery" type="number" min="0" max="100" />
+
+        <label>Notes</label>
+        <textarea name="notes" rows="2"></textarea>
+
+        <hr />
+
+        <h3>Items inside this box</h3>
+        <div id="itemsList" class="items-list"></div>
+
+        <div class="item-form">
+          <input id="itemName" placeholder="Item name" />
+          <input id="itemQty" type="number" placeholder="Quantity" />
+          <input id="itemDesc" placeholder="Description" />
+          <input id="itemImage" type="file" accept="image/*" />
+          <button id="addItemBtn" class="btn small" type="button">Add Item</button>
+        </div>
+
+        <div class="form-actions">
+          <button type="submit" class="btn primary">Save</button>
+          <button type="button" id="cancelBtn" class="btn">Cancel</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- Item Popup (Add/Edit Item) -->
+  <div id="itemModal" class="modal hidden" role="dialog" aria-modal="true">
+    <div class="modal-panel">
+      <button id="itemModalClose" class="modal-close" aria-label="Close">×</button>
+      <h2 id="itemModalTitle">Add Item</h2>
+      <form id="itemForm">
+        <label>Item Name</label>
+        <input name="iname" required maxlength="80" />
+        <label>Quantity</label>
+        <input name="iqty" type="number" min="0" />
+        <label>Description</label>
+        <input name="idesc" maxlength="200" />
+        <label>Category</label>
+        <input name="icat" maxlength="60" />
+        <label>Date</label>
+        <input name="idate" type="date" />
+        <label>Image (optional)</label>
+        <input name="iimage" type="file" accept="image/*" />
+        <div class="form-actions">
+          <button type="submit" class="btn primary">Save Item</button>
+          <button type="button" id="itemCancel" class="btn">Cancel</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- thumbnail image file -->
+  <img id="thumb" src="thumb.svg" alt="" style="display:none">
+
+  <div id="toast" class="toast hidden">✅ Saved successfully!</div>
+
+  <script src="app.js"></script>
 </body>
 </html>
